--- a/templates/pages/cota.html
+++ b/templates/pages/cota.html
@@ -81,7 +81,10 @@
     </p>
     <p>
       We will build the above 'issue solver' agent over the next few videos of
-      our <a class="text-white hover:opacity-75 underline">series</a>.
+      our
+      <a class="text-white hover:opacity-75 underline" href="/video-series"
+        >series</a
+      >.
     </p>
   </article>
 </div>
