--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -84,10 +84,12 @@
   <div class="border border-white p-6">
     <h2 class="text-lg font-bold mb-6">Latest Updates</h2>
 
+    {% call blog::blog_post("February 2, 2025", "Chains of Thought and Action", "We wrote a post introducing chains of thought and action. Read it [here](/cota).") %}
     {% call blog::blog_post("January 16, 2025", "Repo Map Tool", "We've released
     a small tool for generating a concise map of a GitHub repo, optimized for
     LLM chats & agents, using code from [Aider](https://aider.chat). [Try it
-    here!](/repomap)") %} {% call blog::blog_post("January 14, 2025", "New
+    here!](/repomap)") %}
+    {% call blog::blog_post("January 14, 2025", "New
     Website", "We have a new website! It uses Rust, HTMX, and a new font
     Berkeley Mono from the US Graphics Company, from which we also drew
     inspiration on design.") %}
