Add CoTA page (#664)
* Update repomap

* rh

* Create file templates/pages/cota.html

* Update routes.rs

* Update config.rs

* Update content.html

* Update cota.html

* maincss

* Update cota.html

* hm

* Update cota.html

* Update cota.html

* Update cota.html

* maincss

* Update cota.html

* main css

* format

* Update cota.html

* em

* Update cota.html

* nice

* nice

* Update cota.html

* Update home.html

* cota page

--- a/templates/layouts/content.html
+++ b/templates/layouts/content.html
@@ -6,5 +6,6 @@
   %} {% when "/coming-soon" %} {% include "pages/coming-soon.html" %} {% when
   "/repomap" %} {% include "pages/repomap.html" %} {% when "/solver" %} {%
   include "pages/solver.html" %} {% when "/chat" %} {% include "pages/chat.html"
-  %} {% else %} {% include "pages/404.html" %} {% endmatch %}
+  %} {% when "/cota" %} {% include "pages/cota.html" %} {% else %} {% include
+  "pages/404.html" %} {% endmatch %}
 </div>
