--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -135,7 +135,7 @@
           });
       </script>
 
-      <form id="login-form" class="space-y-6" method="POST">
+      <form id="login-form" class="space-y-6" method="POST" action="/auth/login">
         <div>
           <label for="email" class="block text-sm font-medium text-gray-700">
             Email address
